# XML::TreePP Changes

2007/07/22 (0.20)
    * new option: http_lite => HTTP::Lite->new()
    * new option: lwp_useragent => LWP::UserAgent->new() (thanks to NEELY)
      http://rt.cpan.org/Ticket/Display.html?id=28167
    * new option: use_ixhash => 1 (thanks to RENEEB)
      http://rt.cpan.org/Ticket/Display.html?id=23522
    * first_out and last_out options keep its order (thanks to BASHI and sajohn52)
      http://tech.groups.yahoo.com/group/xml-treepp/message/13
    * new tests: 27_http-lite-force.t 28_http-lwp-force.t
      29_http-lwp-withcache.t 30_first_out.t 31_tie_ixhash.t

2006/11/03 (0.19)
    * new option: text_node_key (thanks to Niek)
    * attr_prefix now supports zero-length prefix.

2006/08/13 (0.18)
    * parsehttp()'s 4th argument: an HTTP request header as a hash ref.
    * new option: ignore_error  (thanks to Riyousha)
    * new option: xml_decl (thanks to Stephen and Jon)
    * new tests: 20_http-lite-cached.t 21_http-lwp-cached.t
      22_http-lite-headers.t 23_http-lwp-headers.t 24_ignore_error.t

2006/05/25 (0.17)
    * bug fix: multiple CDATA or text nodes in a element (thanks to junichi)
    * new test: 19_multi_text.t

2006/05/21 (0.16)
    * bug fix: character references support (since 0.14)
    * Encode::FB_XMLCREF support (again)
    * new test: 18_escape_amp.t

2006/05/15 (0.14)
    * new encodings: eucJP-win and eucJP-ms (for Perl 5.005/5.6.1)
    * new entity references: &apos;
    * character references supported: &#38; &#x26;
    * spaces in text node are not deleted on parse() method.
    * returns are not added in text node on write() method.
    * HTTP tests are skipped per default: 09_http-lite.t 10_http-lwp.t
    * new tests: 00_pod.t 13_encoding_en.t 14_encoding_zh.t
                 15_encoding_ja.t 16_encoding_ko.t 17_output_encoding.t

2006/04/30 (0.10)
    * attr_prefix parameter added to emulate E4X, ECMAScript for XML.
    * user_agent parameter and its default value added.